example: Add check-system Makefile target
Signed-off-by: Stéphane Graber <stgraber@ubuntu.com>

--- a/example/Makefile
+++ b/example/Makefile
@@ -15,6 +15,10 @@ check: check-static check-unit check-system
 check-unit:
 	go test ./...
 
+.PHONY: check-system
+check-system:
+	true
+
 .PHONY: check-static
 check-static:
 ifeq ($(shell command -v golangci-lint 2> /dev/null),)
