--- a/.github/workflows/commits.yml
+++ b/.github/workflows/commits.yml
@@ -7,21 +7,8 @@ permissions:
 
 jobs:
   commits:
-    permissions:
-      pull-requests: read  # for tim-actions/get-pr-commits to get list of commits from the PR
-    name: Canonical CLA signed and Signed-off-by (DCO)
+    name: Canonical CLA signed
     runs-on: ubuntu-22.04
     steps:
     - name: Check if CLA signed
       uses: canonical/has-signed-canonical-cla@v1
-
-    - name: Get PR Commits
-      id: 'get-pr-commits'
-      uses: tim-actions/get-pr-commits@master
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Check that all commits are signed-off
-      uses: tim-actions/dco@master
-      with:
-        commits: ${{ steps.get-pr-commits.outputs.commits }}
