workflows: Do not ignore lint errors.
Signed-off-by: Mark Laing <mark.laing@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,9 +47,9 @@ jobs:
       - name: Run static analysis
         run: |
           set -eux
-          make check-static || echo "XXX: Ignoring failures for now"
+          make check-static
 
-          make -C example check-static || echo "XXX: Ignoring failures for now"
+          make -C example check-static
 
       - name: Unit tests (all)
         run: |
