Disable Renovate dependency dashboard
Signed-off-by: Wesley Hershberger <wesley.hershberger@canonical.com>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,8 @@
 {
   "enabled": false
   "dependencyDashboard": false
+  "extends": [
+    "config:recommended",
+    ":disableDependencyDashboard",
+  ]
 }
