--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,8 +1,9 @@
 {
-  "enabled": false
-  "dependencyDashboard": false
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "enabled": false,
+  "dependencyDashboard": false,
   "extends": [
     "config:recommended",
-    ":disableDependencyDashboard",
+    ":disableDependencyDashboard"
   ]
 }
