github: Enable Run TICS step in tics job
Signed-off-by: Kadin Sayani <kadin.sayani@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -148,14 +148,14 @@ jobs:
           gocov-xml < "${GOCOVERDIR}"/coverage.json > "${GOCOVERDIR}"/coverage-go.xml
           go tool covdata percent -i="${GOCOVERDIR}"
 
-      # - name: Run TICS
-      #   uses: tiobe/tics-github-action@v3
-      #   with:
-      #     mode: qserver
-      #     project: MicroCluster
-      #     viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
-      #     branchdir: ${{ github.workspace }}
-      #     ticsAuthToken: ${{ secrets.TICS_AUTH_TOKEN }}
-      #     installTics: true
-      #     calc: ALL
-      #     tmpdir: /tmp/tics
+      - name: Run TICS
+        uses: tiobe/tics-github-action@v3
+        with:
+          mode: qserver
+          project: MicroCluster
+          viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
+          branchdir: ${{ github.workspace }}
+          ticsAuthToken: ${{ secrets.TICS_AUTH_TOKEN }}
+          installTics: true
+          calc: ALL
+          tmpdir: /tmp/tics
